# SimpleBot

./: .gitignore  Cargo.toml  LICENSE  README.md  build.gradle  build.gradle.kts  gradle.properties  settings.gradle  settings.gradle.kts
.github/workflows/: rust.yml
Agent4j9/: build.gradle
Agent4j9/src/main/java/me/lovesasuna/bot/: Agent.java
CustomCore/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
simple_bot/: Cargo.toml
simple_bot/src/: config.rs  main.rs
simple_bot/src/future/: mod.rs  wait.rs
simple_bot/src/handler/: handler.rs  mod.rs
simple_bot/src/model/: keyword.rs  mod.rs
simple_bot/src/plugin/: mod.rs  plugin.rs
simple_bot/src/plugin/internal/: chat.rs  help.rs  information.rs  mod.rs  picture.rs  video.rs
simple_bot/src/plugin/internal/chat/: keyword.rs  remind.rs  repeater.rs
simple_bot/src/plugin/internal/information/: baidu.rs  guess_meaning.rs  jikipedia.rs  news.rs
simple_bot/src/plugin/internal/picture/: ascii2d.rs  pixiv_proxy.rs  saucenao.rs  search.rs  search_source.rs
simple_bot/src/plugin/internal/video/: bilibili.rs
simple_bot_macros/: Cargo.toml
simple_bot_macros/src/: arg.rs  lib.rs  meta.rs
src/: config.rs  main.rs
src/handler/: mod.rs
src/main/java/com/hyosakura/bot/: Agent.java
src/main/java/me/lovesasuna/bot/: Agent.java  Main.kt
src/main/java/me/lovesasuna/bot/controller/: Admin.kt  Bilibili.kt  Card.kt  DownloadImage.kt  Dynamic.kt  GithubWatcher.kt  KeyWord.kt  McQuery.kt  Nbnhhsh.kt  Notice.kt  PictureSearch.kt  PixivCat.kt  PixivGetter.kt  RainbowSix.kt  RepeatDetect.kt  Sort.kt  YuanShen.kt
src/main/java/me/lovesasuna/bot/dao/: DefaultHibernateDao.kt  DynamicDao.kt  HibernateDao.kt  KeyWordDao.kt  LinkDao.kt  NoticeDao.kt
src/main/java/me/lovesasuna/bot/data/: BotData.kt  ConfigData.kt  DependenceData.kt  DynamicData.kt  FilterData.kt  NoticeData.kt
src/main/java/me/lovesasuna/bot/entity/: BotData.kt  ConfigData.kt  DependenceData.kt  DynamicEntity.kt  FilterData.kt  KeyWordEntity.kt  NoticeData.kt  NoticeEntity.kt
src/main/java/me/lovesasuna/bot/file/: AbstractFile.kt  Config.kt  DynamicData.kt  DynamicFile.kt  FileManipulate.kt  FunctionFilterFile.kt  KeyWordFile.kt  NoticeData.kt  NoticeFile.kt
src/main/java/me/lovesasuna/bot/function/: Admin.kt  Baike.kt  Bilibili.kt  DeBug.kt  DownloadImage.kt  Dynamic.kt  Hitokoto.kt  KeyWord.kt  McQuery.kt  Misc.kt  Nbnhhsh.kt  Notice.kt  PictureSearch.kt  PixivCat.kt  RainbowSix.kt  RepeatDetect.kt  ShowDoc.kt  Sort.kt
src/main/java/me/lovesasuna/bot/listener/: FriendMessageListener.kt  GroupMessageListener.kt  MemberLeaveListener.kt
src/main/kotlin/com/hyosakura/bot/: Main.kt
src/main/kotlin/me/lovesasuna/bot/: Main.kt  OriginMain.kt
src/main/resources/: chouxianghua.js  device.json  hibernate.cfg.xml  log4j2.yml  plugin.yml  rebel.xml  record.xml  user.hbm.xml
(+365 files in other folders)
