[package]
name = "simple_bot"
version = "0.1.0"
edition = "2021"
authors = ["LovesAsuna"]
description = "一个自用QQ机器人"
repository = "https://github.com/LovesAsuna/SimpleBot"
keywords = ["QQ", "Bot", "Rust"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc_qq = "0.1.15"
tracing-subscriber = "0.3.15"