[package]
name = "simple_bot"
version = "0.1.0"
edition = "2021"
authors = ["LovesAsuna"]
license = "AGPL"
description = "一个自用QQ机器人"
repository = "https://github.com/LovesAsuna/SimpleBot"
keywords = ["QQ", "Bot", "Rust"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc_qq = "0.1.34"
tracing-subscriber = "0.3.15"
serde = { version = "*", features = ["derive"] }
tokio = { version = "*", features = ["full"] }
serde_yaml = "0.9.13"
serde_json = "*"
async-trait = "*"
anyhow = "*"
regex = "*"
lazy_static = "*"
reqwest = { version = "*", features = ["json"] }
visdom = "0.5.5"
chrono = "0.4.22"
rbdc-sqlite = "0.1.14"
rbatis = "4.0.39"
rbs = "0.1.11"
rand = "*"
simple_bot_macros = { path = "../simple_bot_macros" }