[package]
name = "simple_bot"
version = "0.1.0"
edition = "2021"
authors = ["LovesAsuna"]
license = "AGPL"
description = "一个自用QQ机器人"
repository = "https://github.com/LovesAsuna/SimpleBot"
keywords = ["QQ", "Bot", "Rust"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc_qq = { git = "https://github.com/niuhuan/rust_proc_qq", branch = "master"}
tracing-subscriber = "0"
serde = { version = "*", features = ["derive"] }
tokio = { version = "*", features = ["full"] }
serde_yaml = "0"
serde_json = "*"
async-trait = "*"
anyhow = "*"
regex = "*"
lazy_static = "*"
reqwest = { version = "*", features = ["json"] }
visdom = "0"
chrono = "0"
rbdc-sqlite = "4"
rbatis = "4"
rbs = "4"
rand = "*"